syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

package analytics;

option go_package = "rolando/server/analytics";

service Analytics {
  // given the ID for a chain, return the analytics for that chain
  rpc GetChainAnalytics(google.protobuf.StringValue) returns (ChainAnalytics) {}
  // returns all chain analytics
  rpc GetAllChainsAnalytics(google.protobuf.Empty) returns (stream ChainAnalytics) {}
}

message ChainAnalytics {
  uint32 complexityScore = 1;
  uint32 gifs = 2;
  uint32 images = 3;
  uint32 videos = 4;
  uint32 replyRate = 5;
  uint32 words = 6;
  uint32 messages = 7;
  uint64 bytes = 8;
  string id = 9;
  string name = 10;
}
